@@ -14,6 +14,7 @@
 	added various missing postgresql functions to the postgresql drop-in
 		library, most notably PQprepare, PQexecPrepared, PQexecParams
 	simplified sqlrpaths/sqlrcmdline classes a bit
+	renamed sqlrconfigfile to sqlrconfig
 
 0.63.1 - backported shutdown loop detection
 
